samples/_failures_safe/1761193705_7afa79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c0528b6.c: In function ‘main’:
./samples/SAFE/__tmp_0c0528b6.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
